modified option.ini, removed personal filepath, set theme to dark

--- a/Resources/options.ini
+++ b/Resources/options.ini
@@ -1,5 +1,5 @@
 [Theme]
-theme = light
+theme = dark
 
 [Options]
 auto_connect = False
@@ -9,5 +9,5 @@ auto_rendered_image_load = False
 [Last]
 hostname = localhost
 port = 50013
-rendered_image_filepath = /home/ckreisl/Code/mitsuba/cbox.exr
+rendered_image_filepath =
 
