--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Imath
-numpy==1.15.0
+numpy=1.18.2
 six==1.11.0
 scipy==1.1.0
-matplotlib==2.2.2
+matplotlib==3.2.1
 OpenEXR==1.3.2
 Pillow==5.1.0
-PyQt5==5.11.2
+PyQt5==5.14
 vtk==8.1.1
 
