--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ six==1.11.0
 scipy==1.1.0
 matplotlib==3.2.1
 OpenEXR==1.3.2
-Pillow==5.1.0
-PyQt5==5.14
-vtk==8.1.1
+Pillow==7.1.2
+PySide2==5.14.2.1
+vtk==9.0.0
 
